--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 RewriteEngine on
-RewriteBase /ci/
-RewriteCond %{REQUEST_FILENAME} !-f
+# If the request is not for a valid directory
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?/$1 [L]
+# If the request is not for a valid file
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond $1 !^(index\.php)
+RewriteRule ^(.*)$ index.php/$1 [L]
