--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,5 @@
 RewriteEngine on
-# If the request is not for a valid directory
-RewriteCond %{REQUEST_FILENAME} !-d
-# If the request is not for a valid file
+RewriteBase /ci/
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond $1 !^(index\.php)
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?/$1 [L]
