--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,12 @@
-RewriteEngine on
-RewriteBase /ci/
+RewriteEngine On
+RewriteBase /priyanka/thesis_project
+
+RewriteCond %{REQUEST_URI} ^system.*
+RewriteRule ^(.*)$ /index.php?/$1 [L]
+
+RewriteCond %{REQUEST_URI} ^application.*
+RewriteRule ^(.*)$ /index.php?/$1 [L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?/$1 [L]
