--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ application/config/config.php
 application/config/config.php
 
 application/config/config.php
+
+application/config/routes.php
+
+application/config/routes.php
