--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ application/config/database.php
 application/config/database.php
 
 application/config/database.php
+application/config/database.php
+.htaccess
+application/controllers/Test.php
+.htaccess
